--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/pic3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.gokul_pc.myapplication.MainActivity"
-   >
+    tools:context="com.example.gokul_pc.cgpacalaculator.MainActivity"
+    android:background="@drawable/pic1">
 
     <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="150dp"
-        android:text="Welcome to SGPA Calculator"
-        android:id="@+id/cmp"
+        android:layout_width="500px"
+        android:layout_height="300px"
+        android:text="CGPA CALCULATOR"
+        android:id="@+id/cgpa"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="134dp"
-        android:textColor="#ff0202"
-        android:textSize="45dp" />
+        android:layout_marginTop="87dp"
+        android:textColor="#ff2323"
+        android:textSize="80px" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lets Go"
+        android:text="Start"
         android:id="@+id/str"
+        android:layout_marginBottom="91dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="46dp" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
