--- a/src/main/res/layout/second.xml
+++ b/src/main/res/layout/second.xml
@@ -3,175 +3,99 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:background="@drawable/pic2">
 
-    <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:id="@+id/num1"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:id="@+id/num2"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/num1"
-        android:layout_alignParentLeft="true" />
-
-    <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:id="@+id/num3"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/num2"
-        android:layout_alignParentLeft="true" />
-
-    <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:id="@+id/num4"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/num3"
-        android:layout_alignParentLeft="true" />
-
-    <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:id="@+id/num5"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/num4"
-        android:layout_alignParentLeft="true" />
-
-    <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:id="@+id/num6"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/num5"
-        android:layout_alignParentLeft="true" />
-
-    <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:id="@+id/num7"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/num6"
-        android:layout_alignParentLeft="true" />
-
-    <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:id="@+id/num8"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/num7"
-        android:layout_alignParentLeft="true" />
-
-    <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:id="@+id/num9"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/num8"
-        android:layout_alignParentLeft="true" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Next"
         android:id="@+id/nxt"
         android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/nu9"
-        android:layout_toStartOf="@+id/nu9" />
+        android:layout_centerHorizontal="true" />
 
     <EditText
-        android:layout_width="300px"
+        android:layout_width="430px"
         android:layout_height="100px"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/nu1"
-        android:layout_above="@+id/num2"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:id="@+id/name"
+        android:text="Name"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:inputType="number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
         android:ems="10"
-        android:id="@+id/nu2"
-        android:layout_alignBottom="@+id/num2"
-        android:layout_alignLeft="@+id/nu1"
-        android:layout_alignStart="@+id/nu1" />
+        android:id="@+id/num1"
+        android:layout_below="@+id/name"
+        android:layout_alignEnd="@+id/name"
+        android:text="0.0" />
 
     <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:inputType="number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
         android:ems="10"
-        android:id="@+id/nu3"
-        android:layout_alignTop="@+id/num3"
-        android:layout_alignLeft="@+id/nu2"
-        android:layout_alignStart="@+id/nu2" />
+        android:id="@+id/num2"
+        android:text="0.0"
+        android:layout_below="@+id/num1"
+        android:layout_alignStart="@+id/num1" />
 
     <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:inputType="number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
         android:ems="10"
-        android:id="@+id/nu4"
-        android:layout_below="@+id/nu3"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:id="@+id/num3"
+        android:text="0.0"
+        android:layout_below="@+id/num2"
+        android:layout_alignStart="@+id/num2" />
 
     <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:inputType="number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
         android:ems="10"
-        android:id="@+id/nu5"
-        android:layout_alignTop="@+id/num5"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:id="@+id/num4"
+        android:text="0.0"
+        android:layout_below="@+id/num3"
+        android:layout_alignStart="@+id/num3" />
 
     <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:inputType="number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
         android:ems="10"
-        android:id="@+id/nu6"
-        android:layout_below="@+id/nu5"
-        android:layout_alignLeft="@+id/nu5"
-        android:layout_alignStart="@+id/nu5" />
+        android:id="@+id/num5"
+        android:text="0.0"
+        android:layout_below="@+id/num4"
+        android:layout_alignStart="@+id/num4" />
 
     <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:inputType="number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
         android:ems="10"
-        android:id="@+id/nu7"
-        android:layout_below="@+id/nu6"
-        android:layout_alignLeft="@+id/nu6"
-        android:layout_alignStart="@+id/nu6" />
+        android:id="@+id/num6"
+        android:text="0.0"
+        android:layout_below="@+id/num5"
+        android:layout_alignStart="@+id/num5" />
 
     <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:inputType="number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
         android:ems="10"
-        android:id="@+id/nu8"
-        android:layout_below="@+id/nu7"
-        android:layout_alignLeft="@+id/nu7"
-        android:layout_alignStart="@+id/nu7" />
+        android:id="@+id/num7"
+        android:text="0.0"
+        android:layout_below="@+id/num6"
+        android:layout_alignStart="@+id/num6" />
 
     <EditText
-        android:layout_width="300px"
-        android:layout_height="100px"
-        android:inputType="number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
         android:ems="10"
-        android:id="@+id/nu9"
-        android:layout_alignBottom="@+id/num9"
-        android:layout_alignLeft="@+id/nu8"
-        android:layout_alignStart="@+id/nu8" />
-
+        android:id="@+id/num8"
+        android:text="0.0"
+        android:layout_below="@+id/num7"
+        android:layout_alignStart="@+id/num7" />
 </RelativeLayout>
