--- a/src/main/res/layout/third.xml
+++ b/src/main/res/layout/third.xml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@drawable/pic1">
+    android:background="@drawable/pic3">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="300px"
+        android:layout_height="200px"
+        android:text="CGPA IS"
+        android:id="@+id/ans"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="178dp"
+        android:textSize="80px"
+        android:textColor="#fb2d2d" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="HOME"
         android:id="@+id/hm"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
+        android:layout_alignTop="@+id/bck"
         android:layout_alignParentStart="true" />
 
     <Button
@@ -18,17 +37,7 @@
         android:text="Back"
         android:id="@+id/bck"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:layout_width="300px"
-        android:layout_height="200px"
-        android:id="@+id/answ"
-        android:background="#fffafa"
-        android:textColor="#2a2626"
-        android:textSize="50px"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="54dp" />
 
 </RelativeLayout>
